--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "firebase": "^2.3.2",
     "lodash.debounce": "^4.0.8",
     "request-promise": "^1.0.2",
-    "unofficial-nest-api": "git+https://github.com/kraigm/unofficial_nodejs_nest.git#3cbd337adc32fab3b481659b38d86f9fcd6a9c02"
+    "unofficial-nest-api": "git+https://github.com/NolanT/unofficial_nodejs_nest"
   }
 }
